--- a/docs/sala/bloco_2/laboratorio_de_desenho_tecnico___sala_5-2.mdx
+++ b/docs/sala/bloco_2/laboratorio_de_desenho_tecnico___sala_5-2.mdx
@@ -27,39 +27,11 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Desenho Técnico",
-          size: 3,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
-          students: [
-            "EIN2024 - Grupo B"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Desenho Técnico",
-          size: 3,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
-          students: [
-            "EIN2024 - Grupo A"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
