--- a/docs/turma/ein/ein2024.mdx
+++ b/docs/turma/ein/ein2024.mdx
@@ -138,7 +138,7 @@ export const data = {
           teachers: [
             "Sérgio Takahashi"
           ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "EIN2024 - Grupo B"
           ],
@@ -156,7 +156,7 @@ export const data = {
           teachers: [
             "Sérgio Takahashi"
           ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "EIN2024 - Grupo A"
           ],
