--- a/docs/turma/iiw/iiw2023a.mdx
+++ b/docs/turma/iiw/iiw2023a.mdx
@@ -157,7 +157,7 @@ export const data = {
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
-          classroom: "Laboratório de Computação Aplicada",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2023A"
           ],
