--- a/docs/professor/sergio_takahashi.mdx
+++ b/docs/professor/sergio_takahashi.mdx
@@ -31,7 +31,7 @@ export const data = {
           teachers: [
             "Sérgio Takahashi"
           ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "EIN2024 - Grupo B"
           ],
@@ -49,7 +49,7 @@ export const data = {
           teachers: [
             "Sérgio Takahashi"
           ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "EIN2024 - Grupo A"
           ],
