--- a/versioned_docs/version-2024.2.1/professor/alexandre_rodrigues_monge.mdx
+++ b/versioned_docs/version-2024.2.1/professor/alexandre_rodrigues_monge.mdx
@@ -21,7 +21,7 @@ export const data = {
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
-          classroom: "Laboratório de Computação Aplicada",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2023A"
           ],
