--- a/versioned_docs/version-2024.2.1/professor/daniele_de_almeida_paula.mdx
+++ b/versioned_docs/version-2024.2.1/professor/daniele_de_almeida_paula.mdx
@@ -48,14 +48,28 @@ export const data = {
           students: [
             "TAL2024"
           ],
-          time: "19:00 - 19:50",
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Segurança do trabalho",
+          size: 2,
+          teachers: [
+            "Daniele de Almeida Paula"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2023"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
@@ -91,19 +105,6 @@ export const data = {
     {
       dayName: "Sexta-Feira",
       dayClasses: [
-        {
-          subject: "Segurança do trabalho",
-          size: 2,
-          teachers: [
-            "Daniele de Almeida Paula"
-          ],
-          classroom: "Sala 15-2",
-          students: [
-            "TAL2023"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
         {
           subject: "Microbiologia dos Alimentos",
           size: 2,
