--- a/versioned_docs/version-2024.2.1/professor/leandro_luiz_borges.mdx
+++ b/versioned_docs/version-2024.2.1/professor/leandro_luiz_borges.mdx
@@ -57,7 +57,56 @@ export const data = {
         },
         {
           subject: "Prática profissional (estágio obrigatório) e escrita de relatório",
+          size: 2,
+          teachers: [
+            "Leandro Luiz Borges"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2023"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Prática profissional (estágio obrigatório) e escrita de relatório",
+          size: 1,
+          teachers: [
+            "Leandro Luiz Borges"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2023"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Estágio Obrigatório",
           size: 3,
+          teachers: [
+            "Leandro Luiz Borges"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2023"
+          ],
+          time: "19:50 - 20:40",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Estágio Obrigatório",
+          size: 4,
           teachers: [
             "Leandro Luiz Borges"
           ],
@@ -69,14 +118,6 @@ export const data = {
           color: ""
         }
       ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: []
     }
   ],
   time: [
