--- a/versioned_docs/version-2024.2.1/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
+++ b/versioned_docs/version-2024.2.1/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
@@ -68,6 +68,19 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Desenho Técnico",
+          size: 3,
+          teachers: [
+            "Sérgio Takahashi"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "EIN2024 - Grupo B"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
           subject: "Linguagem de Programação",
           size: 2,
           teachers: [
@@ -99,14 +112,14 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Laboratório de Banco de Dados",
-          size: 2,
+          subject: "Desenho Técnico",
+          size: 3,
           teachers: [
-            "Alexandre Rodrigues Monge"
+            "Sérgio Takahashi"
           ],
           classroom: "Laboratório de Computação Aplicada",
           students: [
-            "IIW2023A"
+            "EIN2024 - Grupo A"
           ],
           time: "07:30 - 08:20",
           color: ""
