--- a/versioned_docs/version-2024.2.1/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/versioned_docs/version-2024.2.1/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -153,6 +153,19 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Laboratório de Banco de Dados",
+          size: 2,
+          teachers: [
+            "Alexandre Rodrigues Monge"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2023A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Orientação de estágio supervisionado",
           size: 1,
           teachers: [
