--- a/versioned_docs/version-2024.2.1/sala/bloco_2/sala_15-2.mdx
+++ b/versioned_docs/version-2024.2.1/sala/bloco_2/sala_15-2.mdx
@@ -77,7 +77,7 @@ export const data = {
         },
         {
           subject: "Controle de Qualidade e Higienização na Indústria Alimentícia",
-          size: 1,
+          size: 2,
           teachers: [
             "Karen Cristina Guedes Silva"
           ],
@@ -184,6 +184,19 @@ export const data = {
           ],
           time: "21:00 - 21:50",
           color: ""
+        },
+        {
+          subject: "Controle de Qualidade e Higienização na Indústria Alimentícia",
+          size: 1,
+          teachers: [
+            "Karen Cristina Guedes Silva"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2023"
+          ],
+          time: "21:50 - 22:40",
+          color: ""
         }
       ]
     },
@@ -204,8 +217,21 @@ export const data = {
           color: ""
         },
         {
+          subject: "Segurança do trabalho",
+          size: 2,
+          teachers: [
+            "Daniele de Almeida Paula"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2023"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
           subject: "Prática profissional (estágio obrigatório) e escrita de relatório",
-          size: 3,
+          size: 2,
           teachers: [
             "Leandro Luiz Borges"
           ],
@@ -213,7 +239,7 @@ export const data = {
           students: [
             "TAL2023"
           ],
-          time: "19:00 - 19:50",
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
@@ -235,16 +261,29 @@ export const data = {
           color: ""
         },
         {
-          subject: "Controle de Qualidade e Higienização na Indústria Alimentícia",
-          size: 2,
+          subject: "Prática profissional (estágio obrigatório) e escrita de relatório",
+          size: 1,
           teachers: [
-            "Karen Cristina Guedes Silva"
+            "Leandro Luiz Borges"
           ],
           classroom: "Sala 15-2",
           students: [
             "TAL2023"
           ],
           time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Estágio Obrigatório",
+          size: 3,
+          teachers: [
+            "Leandro Luiz Borges"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2023"
+          ],
+          time: "19:50 - 20:40",
           color: ""
         }
       ]
@@ -279,10 +318,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Segurança do trabalho",
-          size: 2,
+          subject: "Estágio Obrigatório",
+          size: 4,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Leandro Luiz Borges"
           ],
           classroom: "Sala 15-2",
           students: [
