--- a/versioned_docs/version-2024.2.1/turma/tal/tal2023.mdx
+++ b/versioned_docs/version-2024.2.1/turma/tal/tal2023.mdx
@@ -25,7 +25,7 @@ export const data = {
         },
         {
           subject: "Controle de Qualidade e Higienização na Indústria Alimentícia",
-          size: 1,
+          size: 2,
           teachers: [
             "Karen Cristina Guedes Silva"
           ],
@@ -66,6 +66,19 @@ export const data = {
           ],
           time: "21:00 - 21:50",
           color: ""
+        },
+        {
+          subject: "Controle de Qualidade e Higienização na Indústria Alimentícia",
+          size: 1,
+          teachers: [
+            "Karen Cristina Guedes Silva"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2023"
+          ],
+          time: "21:50 - 22:40",
+          color: ""
         }
       ]
     },
@@ -73,8 +86,39 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Segurança do trabalho",
+          size: 2,
+          teachers: [
+            "Daniele de Almeida Paula"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2023"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
           subject: "Prática profissional (estágio obrigatório) e escrita de relatório",
-          size: 3,
+          size: 2,
+          teachers: [
+            "Leandro Luiz Borges"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2023"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Prática profissional (estágio obrigatório) e escrita de relatório",
+          size: 1,
           teachers: [
             "Leandro Luiz Borges"
           ],
@@ -84,23 +128,18 @@ export const data = {
           ],
           time: "19:00 - 19:50",
           color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
+        },
         {
-          subject: "Controle de Qualidade e Higienização na Indústria Alimentícia",
-          size: 2,
+          subject: "Estágio Obrigatório",
+          size: 3,
           teachers: [
-            "Karen Cristina Guedes Silva"
+            "Leandro Luiz Borges"
           ],
           classroom: "Sala 15-2",
           students: [
             "TAL2023"
           ],
-          time: "19:00 - 19:50",
+          time: "19:50 - 20:40",
           color: ""
         }
       ]
@@ -109,10 +148,10 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Segurança do trabalho",
-          size: 2,
+          subject: "Estágio Obrigatório",
+          size: 4,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Leandro Luiz Borges"
           ],
           classroom: "Sala 15-2",
           students: [
