--- a/docs/professor/celina_de_oliveira_barbosa_gomes.mdx
+++ b/docs/professor/celina_de_oliveira_barbosa_gomes.mdx
@@ -8,6 +8,19 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 2,
+          teachers: [
+            "Celina de Oliveira Barbosa Gomes"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "COM2023"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
           subject: "Língua Estrangeira: Inglês",
           size: 1,
           teachers: [
@@ -40,7 +53,7 @@ export const data = {
         },
         {
           subject: "Língua Portuguesa e Literatura I",
-          size: 4,
+          size: 2,
           teachers: [
             "Celina de Oliveira Barbosa Gomes"
           ],
@@ -70,14 +83,14 @@ export const data = {
           color: ""
         },
         {
-          subject: "Língua Portuguesa e Literatura II",
+          subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
             "Celina de Oliveira Barbosa Gomes"
           ],
-          classroom: "Sala 8-2",
+          classroom: "Sala 9-2",
           students: [
-            "COM2023"
+            "COM2024"
           ],
           time: "10:15 - 11:05",
           color: ""
