--- a/docs/professor/jose_jurandir_pereira_junior.mdx
+++ b/docs/professor/jose_jurandir_pereira_junior.mdx
@@ -32,6 +32,19 @@ export const data = {
           ],
           time: "09:25 - 10:15",
           color: ""
+        },
+        {
+          subject: "Direito do Trabalho e do consumidor",
+          size: 2,
+          teachers: [
+            "José Jurandir Pereira Junior"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "COM2024"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
         }
       ]
     },
@@ -81,21 +94,7 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Direito do Trabalho e do consumidor",
-          size: 2,
-          teachers: [
-            "José Jurandir Pereira Junior"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "COM2024"
-          ],
-          time: "08:20 - 09:10",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
