--- a/docs/professor/sabrina_kerkhoff.mdx
+++ b/docs/professor/sabrina_kerkhoff.mdx
@@ -13,32 +13,6 @@ export const data = {
           teachers: [
             "Sabrina Kerkhoff"
           ],
-          classroom: "Sala 8-2",
-          students: [
-            "COM2023"
-          ],
-          time: "08:20 - 09:10",
-          color: ""
-        },
-        {
-          subject: "Química I",
-          size: 2,
-          teachers: [
-            "Sabrina Kerkhoff"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "COM2024"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        },
-        {
-          subject: "Química II",
-          size: 2,
-          teachers: [
-            "Sabrina Kerkhoff"
-          ],
           classroom: "Sala 15-2",
           students: [
             "IIW2023A"
@@ -94,7 +68,34 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Química I",
+          size: 2,
+          teachers: [
+            "Sabrina Kerkhoff"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "COM2024"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
+          subject: "Química II",
+          size: 2,
+          teachers: [
+            "Sabrina Kerkhoff"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "COM2023"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
