--- a/docs/sala/bloco_2/sala_9-2.mdx
+++ b/docs/sala/bloco_2/sala_9-2.mdx
@@ -37,10 +37,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Química I",
+          subject: "Direito do Trabalho e do consumidor",
           size: 2,
           teachers: [
-            "Sabrina Kerkhoff"
+            "José Jurandir Pereira Junior"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -108,7 +108,7 @@ export const data = {
         },
         {
           subject: "Língua Portuguesa e Literatura I",
-          size: 4,
+          size: 2,
           teachers: [
             "Celina de Oliveira Barbosa Gomes"
           ],
@@ -117,6 +117,19 @@ export const data = {
             "COM2024"
           ],
           time: "13:10 - 14:00",
+          color: ""
+        },
+        {
+          subject: "Fundamentos da Contabilidade",
+          size: 2,
+          teachers: [
+            "Lechan Colares Santos"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "COM2024"
+          ],
+          time: "15:05 - 15:55",
           color: ""
         }
       ]
@@ -138,10 +151,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Direito do Trabalho e do consumidor",
+          subject: "Química I",
           size: 2,
           teachers: [
-            "José Jurandir Pereira Junior"
+            "Sabrina Kerkhoff"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -151,10 +164,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Fundamentos da Contabilidade",
+          subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Lechan Colares Santos"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 9-2",
           students: [
